--- a/Source/src/main/resources/application.properties
+++ b/Source/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.default_schema = laptrinhjavaweb
+spring.jpa.properties.hibernate.default_schema = lightnovel
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
