--- a/Source/pom.xml
+++ b/Source/pom.xml
@@ -173,6 +173,11 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.7.1</version>
+		</dependency>
 
 		<!-- Display tag -->
 		<dependency>
