--- a/Source/src/main/resources/application-local.properties
+++ b/Source/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/lightnovel
+spring.datasource.url = jdbc:postgresql://localhost:5432/lightnovel_temp
 spring.datasource.username = laptrinhjavaweb
 spring.datasource.password = 123456
 
