--- a/Source/src/main/resources/application.properties
+++ b/Source/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.profiles.active=local
 
+#spring.jpa.hibernate.ddl-auto = create
 spring.jpa.hibernate.ddl-auto = none
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
@@ -7,7 +8,7 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.default_schema = lightnovel
+spring.jpa.properties.hibernate.default_schema = lightnovel_temp
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
