--- a/Source/pom.xml
+++ b/Source/pom.xml
@@ -179,6 +179,11 @@
 			<version>5.7.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 		<!-- Display tag -->
 		<dependency>
 			<groupId>displaytag</groupId>
